# cucumber-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
default-skills/: academic-research.yaml  cicd-pipeline.yaml  database-helper.yaml  debugging-techniques.yaml  docker-helper.yaml  git-helper.yaml  github-auth.yaml  github-code-review.yaml  github-pr-workflow.yaml  github-repo-management.yaml  linux-admin.yaml  log-analyzer.yaml  mac-helper.yaml  skill-authoring.yaml  web-qa.yaml  webserver-helper.yaml
installer/: init.py  install.sh  uninstall.sh  update.sh
src/cucumber_agent/: __init__.py  __main__.py  agent.py  autopilot.py  cli.py  config.py  logging_config.py  memory.py  minimax_mcp.py  notifications.py  provider.py  session.py  smart_retry.py  tui.py  workspace.py
src/cucumber_agent/providers/: __init__.py  deepseek.py  minimax.py  ollama.py  openrouter.py
src/cucumber_agent/skills/: __init__.py  loader.py  router.py  runner.py
src/cucumber_agent/tools/: __init__.py  agent.py  base.py  calculator.py  capabilities.py  create_tool.py  datetime_tool.py  loader.py  (+10 more)
tests/: conftest.py  test_autopilot.py  test_cli_commands.py  test_config.py  test_installer.py  test_memory.py  test_memory_sqlite.py  test_minimax_mcp.py  test_notifications.py  test_personality.py  test_providers.py  test_skill_router.py  test_skills.py  test_tools.py  test_understand_image.py  test_web_search.py  test_workspace.py
wiki/: AgentGuide.md  Architecture.md  Autopilot.md  CLI.md  Configuration.md  Memory.md  Providers.md  README.md  Skills.md  Swarm.md
(+1 files in other folders)
